# Instant-Ip-Finder

./: README.md  setup.cfg
src/: __main__.py
src/ip_finder/: __main__.py  file_mg.py  get_ip.py  main.py
