[metadata]
name = ip_finder
version = 1.0.0
description = Interface graphique qui recherche une ip d un nom de domaine
url = https://...
author = Arthur LASNIER
author_email = arthur.lasnier77700@gmail.com
maintainer = Arthur LASNIER
maintainer_email = arthur.lasnier77700@gmail.com


[options]
include_package_data = True
package = find:
package_dir =
    =src

[options.package.find]
where = src